crates/carta/tests/snapshots/golden_writer__org__figure__figure-captioned.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
#+caption: a caption
[[file:pic.png]]
