crates/carta/tests/snapshots/golden_writer__org__figure__figure-with-dims.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
#+caption: alt text
[[file:pic.png]]
